--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -4,18 +4,18 @@
     "private": true,
     "dependencies": {
         "@fluentui/react-northstar": "^0.54.0",
+        "@microsoft/mgt-element": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/mgt-react": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teams-js": "^1.9.0",
         "@microsoft/teamsfx": "^0.5.1",
-        "@microsoft/microsoft-graph-client": "^3.0.1",
         "axios": "^0.21.1",
         "msteams-react-base-component": "^3.1.0",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-router-dom": "^5.1.2",
-        "react-scripts": "^4.0.3",
-        "@microsoft/mgt-react": "2.3.2-next.teamsfx.f5fc7d2",
-        "@microsoft/mgt-element": "2.3.2-next.teamsfx.f5fc7d2",
-        "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.f5fc7d2"
+        "react-scripts": "^4.0.3"
     },
     "devDependencies": {
         "@types/jest": "^26.0.15",
