--- a/templates/tab/js/default/package.json
+++ b/templates/tab/js/default/package.json
@@ -4,6 +4,10 @@
     "private": true,
     "dependencies": {
         "@fluentui/react-northstar": "^0.54.0",
+        "@microsoft/mgt-element": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/mgt-react": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teams-js": "^1.9.0",
         "@microsoft/teamsfx": "^0.5.1",
         "axios": "^0.21.1",
