--- a/packages/manifest/tsconfig.json
+++ b/packages/manifest/tsconfig.json
@@ -19,6 +19,7 @@
     "resolveJsonModule": true,
     "jsx": "react",
     "declaration": true,
+    "strictNullChecks": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/tests/*"]
