chore: format code

--- a/packages/manifest/package.json
+++ b/packages/manifest/package.json
@@ -45,5 +45,10 @@
     },
     "files": [
         "build/**/*"
+    ],
+    "lint-staged": {
+    "*.{js,jsx,css,ts,tsx}": [
+      "npx eslint --cache --fix --quiet"
     ]
+  }
 }
