--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,6 +59,10 @@ jobs:
         with:
           node-version: 14
 
+      - name: Install wine64
+        run: |
+          sudo apt install wine64 -y
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
