--- a/packages/manifest/package.json
+++ b/packages/manifest/package.json
@@ -46,6 +46,9 @@
     "files": [
         "build/**/*"
     ],
+    "publishConfig": {
+        "access": "public"
+    },
     "lint-staged": {
     "*.{js,jsx,css,ts,tsx}": [
       "npx eslint --cache --fix --quiet"
