--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1006,6 +1006,7 @@
     "@types/glob": "^7.1.4",
     "@types/jscodeshift": "^0.11.2",
     "@types/keytar": "^4.4.2",
+    "@types/lodash": "4.14.117",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.3",
@@ -1091,7 +1092,8 @@
     "underscore": "^1.12.1",
     "vscode-extension-telemetry": "^0.2.9",
     "vscode-tas-client": "^0.1.22",
-    "vscode-test": "^1.5.2"
+    "vscode-test": "^1.5.2",
+    "@feathersjs/hooks": "^0.6.5"
   },
   "extensionDependencies": [
     "ms-vscode.azure-account"
