--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-api",
-  "version": "0.15.0",
+  "version": "0.16.0-rc.0",
   "description": "teamsfx framework api",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -62,12 +62,12 @@
   "dependencies": {
     "@azure/core-http": "^1.2.2",
     "@azure/ms-rest-nodeauth": "^3.0.7",
+    "@microsoft/teams-manifest": "^0.0.2-rc.0",
     "@types/fs-extra": "^9.0.10",
     "axios": "^0.21.2",
     "chai": "^4.3.4",
     "jsonschema": "^1.4.0",
-    "neverthrow": "^3.2.0",
-    "@microsoft/teams-manifest": "^0.0.1"
+    "neverthrow": "^3.2.0"
   },
   "gitHead": "7d60c0765c0ea8c023a26c10d1c93001c597afbb",
   "publishConfig": {
