chore(template): update function sdk version

--- a/templates/function-base/ts/default/package.json
+++ b/templates/function-base/ts/default/package.json
@@ -13,7 +13,7 @@
     "dependencies": {
         "@azure/functions": "^1.2.2",
         "@microsoft/microsoft-graph-client": "^3.0.0",
-        "@microsoft/teamsfx": "^0.5.0",
+        "@microsoft/teamsfx": "^0.5.2-alpha.594b33666.0",
         "isomorphic-fetch": "^3.0.0"
     },
     "devDependencies": {
