chore: move teamsBot code from mustache to template and modify eslint config

--- a/templates/bot/js/.eslintrc
+++ b/templates/bot/js/.eslintrc
@@ -1,8 +1,6 @@
 {
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 2017
-    },
-    "env":{
-        "es6": true
+        "sourceType": "module"
     }
 }
