--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -82,6 +82,7 @@
     "mocha": "^9.1.1",
     "mocha-junit-reporter": "^2.0.2",
     "mochawesome": "^7.0.1",
+    "mocked-env": "^1.3.5",
     "nyc": "^15.1.0",
     "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
