--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -35,6 +35,7 @@
     "test:apiv2": "nyc mocha \"tests/plugins/resource/apiv2/*.test.ts\"",
     "test:solutionv3": "nyc mocha \"tests/plugins/solutionv3/*.test.ts\"",
     "test:env-checker": "npx mocha \"tests/common/deps-checker/**/*.it.ts\"",
+    "test:core:miniapp": "nyc mocha \"tests/core/miniapp.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"tests/**/*.ts\"",
